--- a/Public/views/takeassessment.html
+++ b/Public/views/takeassessment.html
@@ -1,3 +1,4 @@
+//I don't think that ng-repeat will work here.
 <a ui-sref='home'><img src='assets/images/home.png' alt="home image" class="imageOfHome" /></a>
 <div class="titleOfAssessment" ng-repeat = 'assessment in assessments'>
   {{assessment.name}}
