--- a/Public/views/login.html
+++ b/Public/views/login.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <p class="brainFit">BrainFit</p>
+  <p class="brainFit">Psych Central</p>
   <div class="rightSideOfNavBar">
     <!-- <p class="usernameText">Username</p>
     <p class="passwordText">Password</p> -->
