--- a/Public/views/home.html
+++ b/Public/views/home.html
@@ -1,5 +1,5 @@
 <a ui-sref='home'><img src='assets/images/home.png' alt="home image" class="imageOfHome" /></a>
 <p class="assessmentsAvailable">Assessments Available</p>
 <div class="assessments" ng-repeat = 'assessment in assessments'>
-<a ui-sref='takeassessment({id:assessment.id})'>{{assessment.name}}</a>
+<a ui-sref='takeassessment({id:assessment.id, name:assessment.name})'>{{assessment.name}}</a>
 </div>
