--- a/Public/views/takeassessment.html
+++ b/Public/views/takeassessment.html
@@ -1,11 +1,7 @@
-//I don't think that ng-repeat will work here.
+<!--I don't think that ng-repeat will work here.-->
 <a ui-sref='home'><img src='assets/images/home.png' alt="home image" class="imageOfHome" /></a>
-<div class="titleOfAssessment" ng-repeat = 'assessment in assessments'>
-  {{assessment.name}}
-</div>
-<div class="assessmentDescriptions" ng-repeat = 'assessment in assessments'>
-  {{assessment.description}}
-</div>
+{{assessmentName}}
+{{assessmentDescription}}
 <div class="questions" ng-repeat = 'question in questions'>
   {{question.question}}
 </div>
