--- a/Public/views/login.html
+++ b/Public/views/login.html
@@ -1,10 +1,29 @@
 <div class="header">
-  <p class="brainFit">Psych Central</p>
-  <div class="rightSideOfNavBar">
-    <!-- <p class="usernameText">Username</p>
+    <p class="brainFit">Lyft</p>
+    <div class="rightSideOfNavBar">
+        <!-- <p class="usernameText">Username</p>
     <p class="passwordText">Password</p> -->
-    <input class="usernameInput" type="text" name="name" value="" placeholder="Username">
-    <input class="passwordInput" type="text" name="name" value="" placeholder="Password">
-    <button class="loginButton" type="button" name="button">Log in</button>
-  </div>
+        <input class="usernameInput" type="text" name="name" value="" placeholder="Username">
+        <input class="passwordInput" type="password" name="name" value="" placeholder="Password">
+        <button class="loginButton" type="button" name="button">
+            <p class="logIn">Log In</p>
+        </button>
+    </div>
+</div>
+<div class="body">
+    <video id="my-video" class="video" autoplay="autoplay" loop="loop" muted="" width="300" height="150">
+        <source src="../assets/images/Escalate/MP4/Escalate.mp4" type="video/mp4"/>
+        <source src="../assets/images/Escalate/OGV/Escalate.ogv" type="video/ogg"/>
+        <source src="../assets/images/Escalate/WEBM/Escalate.webm" type="video/webm"/>
+        Your browser doesn't support HTML5 video. Here's a
+        <a href="#">link</a>
+        to download the video.</video>
+    <p class="signUp">Sign Up</p>
+    <input class="input" type="text" name="name" value="" placeholder="New Username" size="48">
+    <br>
+    <input class="input" type="password" name="name" value="" placeholder="New Password" size="48">
+    <br>
+    <button class="button" type="button" name="button">
+        <p class="createAccount">Create Account</p>
+    </button>
 </div>
