--- a/Public/views/results.html
+++ b/Public/views/results.html
@@ -1,1 +1,2 @@
 <a ui-sref='home'><img src='assets/images/home.png' alt="home image" class="imageOfHome" /></a>
+<a ui-sref='login' class="log-out">Log Out</a>
