--- a/Public/assets/styles/home.css
+++ b/Public/assets/styles/home.css
@@ -1,12 +1,48 @@
+@import 'https://fonts.googleapis.com/css?family=Quattrocento+Sans';
 .imageOfHome {
   width: 50px;
   height: 50px;
-  margin-left: 50px;
-  margin-top: 50px;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 .assessmentsAvailable {
   text-align: center;
+  margin-top: 130px;
+  color: white;
+  font-family: 'Quattrocento Sans', sans-serif;
+  font-size: 70px;
+}
+.parent-of-assessments {
+  display: flex;
+  height: 10vh;
+  width: 100%;
+  justify-content: space-around;;
+  margin-top: 200px;
 }
 .assessments {
+  /*border: red solid;*/
+}
+.assessments a{
+  text-decoration: none;
+  color: black;
   text-align: center;
+  margin-top: 200px;
+  margin-left: 26px;
+  font-family: 'Quattrocento Sans', sans-serif;
+  font-size: 35px;
+  border: lightblue solid;
+  border-radius: 15px;
+  padding: 20px;
+  background-color: white;
+}
+.homePage {
+  background-image: url('../images/background-marsh.png');
+  background-size: cover;
+  height: 100vh;
+}
+.log-out {
+  text-decoration: none;
+  margin-left: 30px;
+  color: white;
+  font-family: 'Quattrocento Sans', sans-serif;
 }
