--- a/Public/assets/styles/login.css
+++ b/Public/assets/styles/login.css
@@ -1,15 +1,20 @@
+@import 'https://fonts.googleapis.com/css?family=Quattrocento+Sans|Reem+Kufi';
 .header {
   height: 20vh;
   width: 100%;
-  background-color: red;
+  background-color: #00B0D1;
   position: relative;
+  z-index: 10;
 }
 .brainFit {
   color: white;
-  font-size: 30px;
-  margin-left: 150px;
+  font-size: 50px;
+  margin-left: 100px;
   float: left;
-  margin-top: 120px;
+  margin-top: 100px;
+  font-family: 'Reem Kufi', sans-serif;
+  z-index: 10;
+  position: relative;
 }
 /*.usernameText {
   margin-top: 100px;
@@ -21,22 +26,126 @@
   margin-right: 30px;
 }*/
 .rightSideOfNavBar {
-    background-color: red;
+    background-color: #00B0D1;
     width: 30%;
     position: absolute;
     height: 20vh;
     margin-left: 70vw;
+    z-index: 10;
+
 }
 .usernameInput {
   margin-top: 20px;
   clear:both;
-  height: 15px;
+  height: 25px;
+  z-index: 10;
+  position: relative;
+}
+.usernameInput[type="text"] {
+  font-size: 16px;
+  border-radius: 8px;
+  z-index: 10;
+  position: relative;
+  font-family: 'Quattrocento Sans', sans-serif;
 }
 .passwordInput {
   margin-top: 120px;
   clear: both;
-  height: 15px;
+  height: 25px;
+  z-index: 10;
+  position: relative;
+}
+.passwordInput[type="password"] {
+  font-size: 16px;
+  border-radius: 8px;
+  z-index: 10;
+  position: relative;
+  font-family: 'Quattrocento Sans', sans-serif;
 }
 .loginButton {
-
+  background-color: white;
+  border-radius: 6px;
+  z-index: 10;
+  position: relative;
+}
+.logIn {
+  font-family: 'Reem Kufi', sans-serif;
+  font-size: 15px;
+  z-index: 10;
+  position: relative;
+}
+.body {
+  background-image: url('../images/Escalate.mp4');
+  height: 60vh;
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
+.signUp {
+ padding: 30px;
+ color: white;
+ font-size: 80px;
+ font-family: 'Reem Kufi', sans-serif;
+ margin-top: 40px;
+ z-index: 10;
+ position: relative;
+}
+.body input {
+  margin-bottom: 15px;
+  size: 10px;
+  z-index: 10;
+  position: relative;
+}
+.input {
+  height: 30px;
+  width: 150px;
+  border-radius: 8px;
+  z-index: 10 !important;
+  position: relative;
+}
+.input[type="text"] {
+  font-size: 16px;
+  z-index: 10;
+  position: relative;
+  font-family: 'Quattrocento Sans', sans-serif;
+}
+.input[type="password"] {
+  font-size: 16px;
+  z-index: 10;
+  position: relative;
+  font-family: 'Quattrocento Sans', sans-serif;
+}
+.body button {
+  margin-top: 15px;
+  z-index: 10;
+  position: relative;
+}
+.button {
+  background: #00B0D1;
+  padding: 20px;
+  border-radius: 18px;
+  z-index: 2;
+  z-index: 10;
+  position: relative;
+}
+.createAccount {
+  font-size: 30px;
+  color: white;
+  font-family: 'Reem Kufi', sans-serif;
+  z-index: 10 !important;
+  position: relative;
+}
+#my-video {
+  position: fixed;
+  top: 50%; left: 50%;
+  z-index: 1;
+  transform: translate(-50%, -50%);
+  position: fixed;
+  top: 50%; left: 50%;
+  z-index: 1;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%, -50%);
 }
