--- a/Public/assets/styles/takeassessment.css
+++ b/Public/assets/styles/takeassessment.css
@@ -13,3 +13,33 @@
   margin-top: 30px;
   font-weight: bolder;
 }
+.take-assessment-page {
+  background-image: url('../images/background-marsh.png');
+  overflow: scroll;
+  height: 100vh;
+}
+.assessmentName {
+  text-align: center;
+  font-family: 'Quattrocento Sans', sans-serif;
+  font-size: 30px;
+  margin-top: 50px;
+  color: black;
+}
+.assessmentDescription {
+  text-align: center;
+  font-family: 'Quattrocento Sans', sans-serif;
+  font-size: 25px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: black;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.questions {
+  margin-top: 40px;
+  margin-left: 50px;
+  margin-right: 50px;
+  color: white;
+  font-family: 'Quattrocento Sans', sans-serif;
+
+}
