--- a/Public/assets/styles/takeassessment.css
+++ b/Public/assets/styles/takeassessment.css
@@ -26,20 +26,77 @@
   color: black;
 }
 .assessmentDescription {
-  text-align: center;
+  /*text-align: center;*/
   font-family: 'Quattrocento Sans', sans-serif;
-  font-size: 25px;
+  font-size: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
   color: black;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 38px;
+  margin-right: 110px;
+  text-indent: 2.0em;
 }
 .questions {
-  margin-top: 40px;
-  margin-left: 50px;
-  margin-right: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 70px;
   color: white;
   font-family: 'Quattrocento Sans', sans-serif;
+  height: 300em;
+  width: 30%;
+  margin-left: 0 px;
+  text-align: center;
+}
+.questions2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 40px;
+  margin-bottom: 70px;
+  color: white;
+  font-family: 'Quattrocento Sans', sans-serif;
+  height: 400em;
+  width: 30%;
 
+  text-align: center;
+}
+.questions li {
+  border: black solid;
+  height: 250px;
+  width: 1440px;
+  background: gray;
+  font-size: 30px;
+  padding-top: 40px;
+  margin-left: -166px;
+}
+.questions2 li {
+  border: black solid;
+  height: 250px;
+  width: 1440px;
+  background: gray;
+  font-size: 30px;
+  padding-top: 40px;
+  margin-left: 0px;
+}
+ul ol {
+  margin-top: 100px;
+}
+#key {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: 20px;
+  font-family: 'Quattrocento Sans', sans-serif;
+}
+.assessmentDescription2 {
+  font-family: 'Quattrocento Sans', sans-serif;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: black;
+  margin-left: 38px;
+  margin-right: 110px;
+  text-align: center;
 }
