--- a/Public/views/results2.html
+++ b/Public/views/results2.html
@@ -5,6 +5,6 @@
   <p class="resultsTitle">Results</p>
   <p class="results">Score: {{score}}</p>
   <p class="key">Key: <br> 1-10 = These ups and downs are considered normal <br> 11-16 = Mild mood disturbance <br> 17-20 = Borderline clinical depression <br> 21-30 = Moderate depression <br> 31-40 = Severe depression <br> 40 and over = Extreme depression </p>
-  <div class="previousresults"><a ui-sref = 'previousresults'><p class=buttontext>See previous results<p></a></div>
+  <!-- <div class="previousresults"><a ui-sref = 'previousresults' ng-click="getResultsByUser(req.params.userid)"><p class=buttontext>See previous results<p></a></div> -->
 </div>
 </div>
