--- a/Public/views/takeassessment2.html
+++ b/Public/views/takeassessment2.html
@@ -163,7 +163,5 @@
   </ul>
 </ul>
 </ul>
-<a href="#">
-<div class = "resultsbutton"  ng-click="postResults(newUser, scores, Date.now(), 2)">Submit</div></a>
-
+<a href="#"><div class = "resultsbutton" ng-click="postResults(currentUser.id, scores, 1)">Submit</div></a>
 </div>
