--- a/Public/views/previousresults.html
+++ b/Public/views/previousresults.html
@@ -1,7 +1,9 @@
+{{test}}
+
 <div class="previousresultspage">
 <a ui-sref='home'><img src='assets/images/home_icon.png' alt="home image" class="imageOfHome"/></a>
 <a ui-sref='login' class="log-out">Log Out</a>
 <div class="boxForGraph">
-  
+  <h1>{{test}} results should show here</h1>
 </div>
 </div>
