--- a/Public/views/results.html
+++ b/Public/views/results.html
@@ -5,6 +5,6 @@
   <p class="resultsTitle">Results</p>
   <p class="results">Score: {{score}}</p>
   <p class="key">Key: <br> 0-21 = low anxiety <br> 22-35 = moderate anxiety <br> 36 and above = potentially concerning levels of anxiety </p>
-  <div class="previousresults"><a ui-sref = 'previousresults'><p class=buttontext>See previous results<p></a></div>
+  <!-- <div class="previousresults"><a ui-sref = 'previousresults' ng-click="getResultsByUser(currentUser.id)"><p class=buttontext>See previous results<p></a></div> -->
 </div>
 </div>
