--- a/Public/views/takeassessment.html
+++ b/Public/views/takeassessment.html
@@ -3,7 +3,7 @@
 <a ui-sref='home'><img src='assets/images/home_icon.png' alt="home image" class="imageOfHome"/></a>
 <a ui-sref='login' class="log-out">Log Out</a>
 <p class="assessmentName">Beck Anxiety Inventory</p> <br>
-<p class="assessmentDescription">Below is a list of common symptoms of anxiety. Please carefully read each item in the list. Indicate home much you have been bothered by that symptom during the past month, including today, by using the key and selecting the number in the corresponding space under the symptom.</p> <p>
+<p class="assessmentDescription">Below is a list of common symptoms of anxiety. Please carefully read each item in the list. Indicate how much you have been bothered by that symptom during the past month, including today, by using the key and selecting the number in the corresponding space under the symptom.</p> <p>
   <ul class="questions2">
 <li>Numbness or tingling
   <ul  id="key">
